test_programs/valid/switch_statement.c
int main()
{
    int a;
    switch (a) {
    case 10:
        break;
    case 42:
    default:
        break;
    }
}
