test_programs/invalid/label_at_end_of_stmt.c
int main()
{
    int a;
    switch (a) {
    case 10:
    }
}
